Fix projects carousel drag on iPhone

--- a/src/styles/pages-blocks/_projects-carousel.scss
+++ b/src/styles/pages-blocks/_projects-carousel.scss
@@ -66,6 +66,7 @@
     scrollbar-width: none;
     scroll-behavior: smooth;
     touch-action: pan-y;
+    -webkit-overflow-scrolling: touch;
 
     &::-webkit-scrollbar {
       display: none;
